--- a/templates/register.html
+++ b/templates/register.html
@@ -12,8 +12,8 @@
   <p><label>Enter your username: <input type="text" name="username"></label></p>
   <p><label> Enter your password: <input type="password" name="password"></label></p>
   <!-- Confirm your password: <input type="password" name="password"> -->
-  <select name="fav-cuisine">
   What's your favorite cuisine type?
+  <select name="fav-cuisine">
     <option value="Japanese">Japanese</option>
     <option value="Chinese">Chinese</option>
     <option value="Korean">Korean</option>
@@ -22,7 +22,7 @@
     <option value="Middle Eastern">Middle Eastern</option>
     <option value="Indian">Indian</option>
   </select>
-  <input type="submit">
+  <input type="submit" value="Register!">
 </form>
 {% endblock %}
 
