--- a/templates/my_favorite.html
+++ b/templates/my_favorite.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <h2>Restaurants Marked as Favorites</h2>
 {% if restaurants %}
   <div class="col-md-12">
     {% for restaurant in restaurants %}
     <div class="col-md-4">
-      <img src={{ restaurant.image }} width="250px" height="180px"><br>
+      
       <form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
-        <a href="/search_restaurant/{{ restaurant.restaurant_id }}">{{ restaurant.name }}</a>
+        <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
+          <img src={{ restaurant.image }} width="250px" height="180px"><br>{{ restaurant.name }}
+        </a>
         <span class="glyphicon glyphicon-trash"><input type="submit" value="Remove"></span>
       </form>
     </div>
@@ -22,4 +25,5 @@
     </div>
   </div>
 {% endif %}
+
 {% endblock %}
