--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,10 +25,9 @@
       {% endfor %}
     <div><h3>User Comments</h3><br>
       {% for c in user.comments %}
-      <div class="comment-div">
+      <div class="comment-div" id="comment-{{ c.comment_id }}">
         <b><a href="/search_restaurant/{{ c.comments.restaurant_id }}">{{ c.comments.name }}</a></b> - {{ c.comment }}
-          <input id="value" type="hidden" value={{ c.comment_id }}>
-          <a href='/remove_comment.json' id="commentBtn">Remove</a>
+          <a href='/remove_comment.json' data-comment-id="{{ c.comment_id }}" class="remove">Remove</a>
       </div>
       {% endfor %}
     </div>
