--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <title>San Franasia</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/base.css">
+  <link rel="stylesheet" href="/static/css/map.css">
 </head>
 
 
@@ -61,6 +62,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/static/js/favorite.js"></script>
   <script type="text/javascript" src="/static/js/numLike.js"></script>
+  <script type="text/javascript" src="/static/js/map.js"></script>
   <script type="text/javascript" src="/static/js/removeComment.js"></script>
   <script type="text/javascript" src="/static/js/addRestaurant.js"></script>
 </body>
