--- a/templates/my_favorite.html
+++ b/templates/my_favorite.html
@@ -10,7 +10,7 @@
       
       <form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
         <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
-          <img src={{ restaurant.image }} width="250px" height="180px"><br>{{ restaurant.name }}
+          <img src={{ restaurant.image }} class="img-rounded" width="250px" height="180px"><br>{{ restaurant.name }}
         </a>
         <span class="glyphicon glyphicon-trash"><input type="submit" value="Remove"></span>
       </form>
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-md-10">
       <h2>Your favorite list is empty.</h2>
-      <img src="/static/img/randomtaichi.jpeg" height="300px" width="400px">
+      <img src="/static/img/randomtaichi.jpeg" class="img-rounded" height="300px" width="400px">
     </div>
   </div>
 {% endif %}
