--- a/templates/restaurant_list.html
+++ b/templates/restaurant_list.html
@@ -9,7 +9,7 @@
     <div class="col-md-4">
       <form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
         <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
-          <img src={{ restaurant.image }} width="250px" height="180px"><br>{{ restaurant.name }}
+          <img src={{ restaurant.image }} class="img-rounded" width="250px" height="180px"><br>{{ restaurant.name }}
         </a>
       </form>
       <br>
