fixing google map async defer issues and added a few flask routes unittests.

--- a/templates/restaurant_info.html
+++ b/templates/restaurant_info.html
@@ -87,6 +87,7 @@
     </style>
 
     <!---Google Map API-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATx-dTNuzvPtdyA7R0YmOYH5gD498D4Vs"></script>
     <script>
 
       var restLatlng = {
@@ -101,8 +102,8 @@
       ;
 
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATx-dTNuzvPtdyA7R0YmOYH5gD498D4Vs"
-      async defer></script>
+
+
 
   <br>
   <br>
