--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -52,15 +52,12 @@
       <!---Raise error message when user type random things that are neither usernames or restaurant names-->
   </div>
 </div>
-  {% if exist_restaurants %}
+  {% if exist_restaurants or exist_usernames %}
     <div class="row">
       <div class="col-md-12">
         <div class="col-md-9">
           <h2>Restaurants Which Match Your Search:</h2>
-
-        <!--Restaurants about to be added-->
-      
-        <hr>
+          <hr>
         {% for restaurant in exist_restaurants %}
           <div class="col-md-4" id="fixed-div">
           <a href="/search_restaurant/{{ restaurant.restaurant_id }}"><br>
@@ -71,7 +68,6 @@
         {% endfor %}
       </div>
       <div class="col-md-3">
-  {% elif exist_usernames %}
         <h3>Users Who Match Your Search:</h3>
         {% for username in exist_usernames %}
         <li>
@@ -85,7 +81,7 @@
 </div>
   {% else %}
   <div class="row">
-    <h3>Sorry, we don't have this in record. Please try again.</h3>
+    <p>Sorry, we don't understand you. Please try again.</p>
     <br>
   </div>
   {% endif %}
